# internal/app/model/input/Appeal.go
@@ -1,12 +1,10 @@
 package input
 
 type Appeal struct {
-	Id           int32    `json:"id"`
-	UserID       *int32   `json:"user_id"`
-	AppealTypeID *int32   `json:"appeal_type_id"`
-	Title        *string  `json:"title"`
-	Description  *string  `json:"description"`
-	Address      *string  `json:"address"`
-	Latitude     *float64 `json:"latitude"`
-	Longitude    *float64 `json:"longitude"`
+	AppealTypeID *int32   `json:"appeal_type_id" example:"1"`
+	Title        *string  `json:"title" example:"Обращение"`
+	Description  *string  `json:"description" example:"Текст обращения"`
+	Address      *string  `json:"address" example:"Улица Пушкина"`
+	Latitude     *float64 `json:"latitude" example:"54.1234"`
+	Longitude    *float64 `json:"longitude" example:"122.7656"`
 }
