# internal/app/model/response/Appeal.go
@@ -5,14 +5,14 @@ import (
 )
 
 type Appeal struct {
-	Id          int32       `json:"id"`
+	Id          int32       `json:"id" example:"1"`
 	User        *User       `json:"user"`
 	AppealType  *AppealType `json:"appeal_type"`
-	Title       *string     `json:"title"`
-	Description *string     `json:"description"`
-	Address     *string     `json:"address"`
-	Latitude    *float64    `json:"latitude"`
-	Longitude   *float64    `json:"longitude"`
+	Title       *string     `json:"title" example:"Обращение"`
+	Description *string     `json:"description" example:"Текст обращения"`
+	Address     *string     `json:"address" example:"Улица Пушкина"`
+	Latitude    *float64    `json:"latitude" example:"54.1234"`
+	Longitude   *float64    `json:"longitude" example:"122.7656"`
 }
 
 type AppealPaged struct {
